@@ -9,7 +9,7 @@ import java.util.stream.Collectors;
  */
 public class Solution1 {
 
-    private static class Course{
+    private static class Course {
         public final String course;
         public final int occurence;
 
@@ -19,40 +19,32 @@ public class Solution1 {
         }
     }
 
-    private void getCourses(char nextMenu, Set<String>selectedMenus,
+    private void getCourses(char nextMenu, Set<String> selectedMenus,
                             List<Set<String>> orderList,
-                            Map<Integer, List<Course>>courses) {
-        //
+                            Map<Integer, List<Course>> courses) {
+
         int occurences = (int) orderList.stream()
                 .filter(order -> order.containsAll(selectedMenus))
                 .count();
-        //
-        if(occurences < 2) return;
-        //
+
+        if (occurences < 2) return;
+
         int size = selectedMenus.size();
-        //
-        if(courses.containsKey(size)) {
-            List<Course> courseList = courses.get(size);
-            Course course = new Course(selectedMenus.stream()
-                                .sorted()
-                                .collect(Collectors.joining("")), occurences);
+        if (courses.containsKey(size)) {
+            List<Course> courseList = courses.get(size);  // 일치하는 길이의 메뉴 코스를 담는다
 
-        Course original = courseList.get(0);
+            String courseParam = selectedMenus.stream()
+                    .sorted().collect(Collectors.joining("")); // 선택된 메뉴 정렬, 문자열로 합치기
 
-        if(original.occurence  < occurences) {
-            courseList.clear();
-            courseList.add(course);
-        } else if (original.occurence == occurences) courseList.add(course);
-        }
+            Course course = new Course(courseParam, occurences); // 합친 문자열과 빈도수 담기
 
-        if(size >= 10) return;
-
-        for ( char menuChar = nextMenu; menuChar <= 'Z'; menuChar++) {
-            String menu = String.valueOf(menuChar);
-            selectedMenus.add(menu);
-
-            getCourses((char)(menuChar + 1), selectedMenus, orderList, courses);
-            selectedMenus.remove(menu);
+            Course original = courseList.get(0);
+            if (original.occurence < occurences) {  // 뒤에 애가 빈도수 더 높으면 original 제거 후 담기
+                courseList.clear();
+                courseList.add(course);
+            } else if (original.occurence == occurences) {
+                courseList.add(course);
+            }
         }
     }
 
@@ -60,27 +52,29 @@ public class Solution1 {
 
         List<Set<String>> orderList = Arrays.stream(orders)
                 .map(String::chars)
-                .map(c -> c.mapToObj(menu -> String.valueOf((char)menu)).collect(Collectors.toSet()))
-                .collect(Collectors.toList());
+                .map(charStream -> charStream.mapToObj(menu -> String.valueOf((char) menu))
+                        .collect(Collectors.toSet()))
+                .toList();
 
         Map<Integer, List<Course>> courses = new HashMap<>();
-        for ( int length : course) {
+        for (int length : course) {
             List<Course> list = new ArrayList<>();
             list.add(new Course("", 0));
             courses.put(length, list);
         }
 
         getCourses('A', new HashSet<>(), orderList, courses);
-
+        //
         return courses.values().stream()
-                .filter(list -> list.get(0).occurence > 0 )
+                .filter(list -> list.get(0).occurence > 0)
                 .flatMap(List::stream)
                 .map(c -> c.course)
                 .sorted()
                 .toArray(String[]::new);
+    }
 }
 
-}
+
 /**
  * @orders ["ABCFG", "AC", "CDE", "ACDE", "BCFG", "ACDEH"]
  * @course [2, 3, 4]
